# secretly

./: README.md
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  Dockerfile.lambda  Makefile  docker-compose.yml  pyproject.toml  serverless.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: f7f808c5d77b_create_secrets_table.py
backend/app/: config.py  database.py  main.py
backend/app/models/: secret.py
backend/app/routers/: health.py  secrets.py
backend/app/routers/schemas/: secrets.py
backend/tests/: conftest.py  test_health.py  test_secrets.py
e2e/: Makefile  index.js
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/lib/: clipboard.ts  crypto.ts
frontend/src/pages/: CreateSecret.tsx  HowItWorks.tsx  NotFound.tsx  ViewSecret.tsx  index.ts
frontend/src/pages/components/: BackLink.tsx
frontend/tests/: App.test.tsx  setup.ts
frontend/tests/lib/: clipboard.test.ts  crypto.test.ts
frontend/tests/pages/: CreateSecret.test.tsx  ViewSecret.test.tsx
frontend/tests/utils/: clipboard.ts  crypto.ts
